[gd_scene load_steps=13 format=3 uid="uid://3vrv2phvtk8g"]

[ext_resource type="Texture2D" uid="uid://c54boyokl6ee6" path="res://assets/tiny_swords/UI/Banners/Banner_Vertical.png" id="1_74i22"]
[ext_resource type="Script" uid="uid://hxyyn4rm1fg7" path="res://source/GUI/side_menu/side_menu.gd" id="2_e60xh"]
[ext_resource type="Texture2D" uid="uid://c737pfl5qb0de" path="res://assets/tiny_swords/Resources/Resources/G_Idle_(NoShadow)_cropped.png" id="4_hjl50"]
[ext_resource type="PackedScene" uid="uid://br3q7nprega88" path="res://source/GUI/side_menu/buyable_object.tscn" id="4_v6n4c"]
[ext_resource type="Texture2D" uid="uid://bewlckxdgigda" path="res://assets/tiny_swords/UI/Buttons/BUTTON_SOUND_ON.png" id="5_jjh12"]
[ext_resource type="Texture2D" uid="uid://xm7cbhut6eec" path="res://assets/tiny_swords/UI/Buttons/BUTTON_SOUND_OFF.png" id="6_btwoq"]
[ext_resource type="Texture2D" uid="uid://c71ejnysbs3kp" path="res://assets/tiny_swords/UI/Buttons/BUTTON_PAUSE_OFF.png" id="7_jjh12"]
[ext_resource type="Texture2D" uid="uid://cjxbsprum3oov" path="res://assets/tiny_swords/UI/Buttons/BUTTON_PAUSE_ON.png" id="8_btwoq"]
[ext_resource type="Texture2D" uid="uid://bjfi4k7c5fxwo" path="res://assets/tiny_swords/UI/Buttons/BUTTON_PLAY_ON.png" id="9_jjh12"]
[ext_resource type="Texture2D" uid="uid://blskntmtx5fqa" path="res://assets/tiny_swords/UI/Buttons/BUTTON_PLAY_OFF.png" id="10_btwoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4cioj"]
atlas = ExtResource("1_74i22")
region = Rect2(36, 31, 120, 131)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s8eb1"]
texture = SubResource("AtlasTexture_4cioj")
texture_margin_left = 17.6695
texture_margin_top = 31.2837
texture_margin_right = 17.9592
texture_margin_bottom = 26.0698
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 120, 131)

[node name="SideMenu" type="PanelContainer"]
offset_left = 1620.0
offset_top = 1.0
offset_right = 1943.0
offset_bottom = 1086.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_s8eb1")
script = ExtResource("2_e60xh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BuyableTower" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_v6n4c")]
layout_mode = 2

[node name="GoldContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/GoldContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.4
texture = ExtResource("4_hjl50")
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/GoldContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
text = "420"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="MuteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_jjh12")
texture_pressed = ExtResource("6_btwoq")

[node name="PauseButton" type="TextureButton" parent="MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_jjh12")
texture_pressed = ExtResource("8_btwoq")

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/ControlsContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("9_jjh12")
texture_pressed = ExtResource("10_btwoq")
